--- a/app/src/main/res/layout/activity_artist_detail.xml
+++ b/app/src/main/res/layout/activity_artist_detail.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent" android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:fitsSystemWindows="true"
         tools:context=".ui.discover.activity.ArtistDetailActivity">
 
@@ -34,7 +34,7 @@
                     android:scaleType="centerCrop"
                     android:id="@+id/iv_cover"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content" />
 
             <androidx.appcompat.widget.Toolbar
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
@@ -42,7 +42,7 @@
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?android:actionBarSize"
-                    app:layout_collapseMode="pin"/>
+                    app:layout_collapseMode="pin" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
@@ -56,10 +56,10 @@
                 android:background="@color/color_white"
                 android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
         <!--分割线-->
-        <View style="@style/CommonLineStyle"/>
+        <View style="@style/CommonLineStyle" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -69,6 +69,9 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:id="@+id/viewPager2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
+
+    <!--底部控制栏-->
+    <include layout="@layout/fragment_control" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
