--- a/app/src/main/res/layout/activity_song_list_detail.xml
+++ b/app/src/main/res/layout/activity_song_list_detail.xml
@@ -151,5 +151,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
+    <!--底部控制栏-->
+    <include layout="@layout/fragment_control"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
