--- a/app/src/main/res/layout/activity_song_list_square.xml
+++ b/app/src/main/res/layout/activity_song_list_square.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -8,4 +8,7 @@
 
     <include layout="@layout/toolbar_layout"/>
 
-</LinearLayout>
+    <!--底部控制栏-->
+    <include layout="@layout/fragment_control"/>
+
+</FrameLayout>
