--- a/app/src/main/res/layout/item_music.xml
+++ b/app/src/main/res/layout/item_music.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   android:id="@+id/container"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="72dp"
-                                                   android:background="?android:attr/selectableItemBackground"
-                                                   android:gravity="center_vertical"
-                                                   android:orientation="horizontal"
-                                                   tools:layout_editor_absoluteY="25dp">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        tools:layout_editor_absoluteY="25dp">
 
     <View
             android:visibility="gone"
@@ -17,18 +17,18 @@
             android:layout_height="0dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
-            android:background="@color/green"
+            android:background="@color/color_09bb07"
             android:contentDescription="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
     <com.makeramen.roundedimageview.RoundedImageView
             android:src="@drawable/default_cover"
             app:riv_corner_radius="4dp"
             android:id="@+id/iv_cover"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:layout_marginStart="15dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
@@ -38,7 +38,7 @@
             app:layout_constraintEnd_toStartOf="@+id/tv_title"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/default_cover"/>
+            app:srcCompat="@drawable/default_cover" />
 
 
     <TextView
@@ -46,25 +46,25 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="18dp"
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:lines="1"
             android:text="@string/song"
             android:textColor="@color/common_black_text"
-            android:textSize="@dimen/common_text_size"
+            android:textSize="@dimen/common_text_size_15sp"
             app:layout_constraintBottom_toTopOf="@+id/tv_artist"
             app:layout_constraintEnd_toStartOf="@+id/view_tag"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/iv_cover"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
             android:id="@+id/tv_artist"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="3dp"
             android:layout_marginBottom="16dp"
             android:drawablePadding="2dp"
             android:ellipsize="end"
@@ -76,7 +76,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/tv_title"
             app:layout_constraintStart_toEndOf="@+id/iv_cover"
-            app:layout_constraintTop_toBottomOf="@+id/tv_title"/>
+            app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
 
     <LinearLayout
@@ -98,11 +98,11 @@
                 android:layout_gravity="center"
                 android:layout_margin="2dp"
                 android:padding="2dp"
-                android:src="@drawable/baidu"
+                android:src="@drawable/netease"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/iv_more"
                 app:layout_constraintStart_toEndOf="@+id/tv_title"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
                 android:id="@+id/iv_mv"
@@ -115,7 +115,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/iv_more"
                 app:layout_constraintStart_toEndOf="@+id/iv_resource"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
     </LinearLayout>
 
@@ -130,7 +130,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/view_tag"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     <View
@@ -143,7 +143,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
