--- a/app/src/main/res/layout/activity_play_local.xml
+++ b/app/src/main/res/layout/activity_play_local.xml
@@ -9,4 +9,14 @@
 
     <include layout="@layout/toolbar_layout" />
 
+    <net.lucode.hackware.magicindicator.MagicIndicator
+            android:background="@color/colorPrimary"
+            android:layout_width="match_parent"
+            android:layout_height="48dp" />
+
+
+    <androidx.viewpager2.widget.ViewPager2
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
 </LinearLayout>
