--- a/app/src/main/res/layout/activity_play_local.xml
+++ b/app/src/main/res/layout/activity_play_local.xml
@@ -10,12 +10,13 @@
     <include layout="@layout/toolbar_layout" />
 
     <net.lucode.hackware.magicindicator.MagicIndicator
-            android:background="@color/colorPrimary"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/magicIndicator"
             android:layout_width="match_parent"
-            android:layout_height="48dp" />
-
+            android:layout_height="45dp" />
 
     <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewPager2"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
