1、本地歌曲列表    2、播放历史空白页

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="common_white_background">#ffffff</color>
     <color name="common_black_text">#191919</color>
     <color name="common_white_text">#ffffff</color>
+    <color name="common_grey_text">#9e9e9e</color>
     <color name="backgroundColor">#E8E8E0</color>
 
     <!--material design 基础色-->
