--- a/app/src/main/res/layout/activity_play_history.xml
+++ b/app/src/main/res/layout/activity_play_history.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.my.activity.PlayHistoryActivity">
 
-    <include layout="@layout/toolbar_layout"/>
+    <include layout="@layout/toolbar_layout" />
 
-    <androidx.recyclerview.widget.RecyclerView
-            tools:listitem="@layout/item_music"
-            android:id="@+id/recyclerView"
+    <com.classic.common.MultipleStatusView
+            app:emptyView="@layout/layout_empty_view"
+            android:id="@+id/multiple_StatusView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+                tools:listitem="@layout/item_music"
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+    </com.classic.common.MultipleStatusView>
 
 </LinearLayout>
