动态加载控制视图的Fragment

--- a/app/src/main/res/layout/fragment_control.xml
+++ b/app/src/main/res/layout/fragment_control.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-          android:id="@+id/control_fragment"
-          android:layout_gravity="bottom"
-          android:layout_width="match_parent"
-          android:name="com.lpc.snowmusic.ui.discover.fragment.ControlFragment"
-          android:layout_height="56dp">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/control_layout"
+        android:layout_gravity="bottom"
+        android:layout_width="match_parent"
+        android:layout_height="48dp">
 
-</fragment>
+</FrameLayout>
