--- a/app/src/main/res/layout/fragment_local_detail.xml
+++ b/app/src/main/res/layout/fragment_local_detail.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.classic.common.MultipleStatusView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
+        android:id="@+id/multiple_StatusView"
+        app:emptyView="@layout/layout_empty_view"
         android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
