--- a/app/src/main/res/layout/fragment_control_layout.xml
+++ b/app/src/main/res/layout/fragment_control_layout.xml
@@ -6,7 +6,8 @@
         android:background="@color/color_white"
         android:orientation="vertical">
 
-    <View style="@style/CommonLineStyle" />
+    <View style="@style/CommonLineStyle"
+            android:background="@color/Grey300"/>
 
     <LinearLayout
             android:id="@+id/bottom_control"
@@ -17,8 +18,8 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_marginRight="10dp"
-                app:civ_border_width="1dp"
-                app:civ_border_color="@color/Grey400"
+                app:civ_border_width="1px"
+                app:civ_border_color="@color/Grey300"
                 android:id="@+id/iv_cover"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
