--- a/app/src/main/res/layout/fragment_local_detail.xml
+++ b/app/src/main/res/layout/fragment_local_detail.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.classic.common.MultipleStatusView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:id="@+id/multiple_StatusView"
-        app:emptyView="@layout/layout_empty_view"
         android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -11,4 +8,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-</com.classic.common.MultipleStatusView>
+    <include
+            android:id="@+id/empty_layout"
+            android:visibility="gone"
+            layout="@layout/layout_empty_view" />
+
+</FrameLayout>
