通知栏控制相关

--- a/app/src/main/res/layout/layout_player_notification.xml
+++ b/app/src/main/res/layout/layout_player_notification.xml
@@ -52,7 +52,7 @@
             android:background="@color/color_black"
             android:clickable="true"
             android:focusable="true"
-            android:src="@drawable/ic_pause"
+            android:src="@drawable/ic_play"
             tools:ignore="ContentDescription" />
 
     <ImageButton
