--- a/app/src/main/res/drawable/drawable_seek_progress_bg.xml
+++ b/app/src/main/res/drawable/drawable_seek_progress_bg.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@android:id/background">
         <shape>
-            <solid android:color="#33ffffff"/>
+            <solid android:color="@color/translucent_white_24p"/>
             <size android:height="1dp"/>
             <corners android:radius="1.5dip"/>
         </shape>
@@ -10,7 +10,7 @@
     <item android:id="@android:id/secondaryProgress">
         <clip>
             <shape>
-                <solid android:color="#33ffffff"/>
+                <solid android:color="@color/translucent_white"/>
                 <size android:height="1dp"/>
                 <corners android:radius="1.5dip"/>
             </shape>
@@ -19,7 +19,7 @@
     <item android:id="@android:id/progress">
         <clip>
             <shape>
-                <solid android:color="#09BB07"/>
+                <solid android:color="@color/color_white"/>
                 <size android:height="1dp"/>
                 <corners android:radius="1.5dip"/>
             </shape>
