--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -189,14 +189,15 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
 
-                <ProgressBar
-                        android:id="@+id/loadingPb"
-                        style="@style/Widget.AppCompat.ProgressBar"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                <com.wang.avi.AVLoadingIndicatorView
+                        tools:visibility="visible"
+                        app:indicatorName="BallSpinFadeLoaderIndicator"
+                        android:id="@+id/loadingAv"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:layout_gravity="center"
                         android:layout_margin="8dp"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
 
             </FrameLayout>
 
