视频播放的封装

--- a/app/src/main/res/layout/activity_mv_detail.xml
+++ b/app/src/main/res/layout/activity_mv_detail.xml
@@ -5,7 +5,7 @@
         android:layout_height="match_parent"
         tools:context=".ui.mv.activity.MvDetailActivity">
 
-    <ImageView
+    <com.example.lpc.videoplayer.video.video.BaseVideoView
             android:id="@+id/videoCover"
             android:layout_width="match_parent"
             android:layout_height="200dp" />
