--- a/videoplayer/src/main/res/layout/layout_video_base.xml
+++ b/videoplayer/src/main/res/layout/layout_video_base.xml
@@ -62,16 +62,14 @@
                 android:id="@+id/total"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="16dp"
                 android:text="00:00"
                 android:textColor="#ffffff" />
 
         <ImageView
+                android:padding="15dp"
                 android:id="@+id/fullscreen"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingRight="16dp"
-                android:scaleType="center"
                 android:src="@drawable/ic_full_screen" />
     </LinearLayout>
 
@@ -131,19 +129,19 @@
 
     <ImageView
             android:id="@+id/start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_gravity="center_vertical"
             android:src="@drawable/ic_play" />
 
 
-
     <ImageView
+            android:visibility="gone"
             android:id="@+id/lock_screen"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="50dp"
