视频播放的操作

--- a/app/src/main/res/layout/activity_mv_detail.xml
+++ b/app/src/main/res/layout/activity_mv_detail.xml
@@ -6,7 +6,7 @@
         tools:context=".ui.mv.activity.MvDetailActivity">
 
     <com.example.lpc.videoplayer.video.video.BaseVideoView
-            android:id="@+id/videoCover"
+            android:id="@+id/videoView"
             android:layout_width="match_parent"
             android:layout_height="200dp" />
 
