--- a/videoplayer/src/main/res/layout/layout_video_base.xml
+++ b/videoplayer/src/main/res/layout/layout_video_base.xml
@@ -128,7 +128,7 @@
             android:visibility="invisible" />
 
     <ImageView
-            android:id="@+id/start"
+            android:id="@+id/startIv"
             android:layout_width="42dp"
             android:layout_height="42dp"
             android:layout_centerHorizontal="true"
